--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1 id = "headliner">Hello, my name is Peter!</h1>
-<div id = 'middlepic'><img src="../pics/IMG_0024.JPG" alt="korean"></div>
+<div id = 'middlepic'><img src="..pics/IMG_0024.JPG" alt="korean"></div>
 <p class = "middleinfo">I am programmer who is looking to expand on
   different ideas and thoughts and going to be a
 </p>
